@@ -4,6 +4,7 @@
 	haxedoc : fixed type parameters display
 	fix for JS and Flash9 XML parser : allow newlines in attributes
 	disable Flash9 resources with AS3Gen
+	error on extra anonymous fields
 
 2007-07-25: 1.14
 	fixed no error when invalid "catch" expression
